Bug 663194 - Calling drawImage with zero-size canvas should throw INVALID_STATE_ERR; r=sicking